<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">kardex</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ok">Aceptar</string>
    <string name="code">Código</string>
    <string name="pass">Password</string>
    <string name="back">Volver</string>
    <string name="teacher">Docente</string>
    <string name="add">Adicionar</string>
    <string name="delete">Eliminar</string>
    <string name="edit">Modificar</string>
    <string name="set_title">Asignar Materia</string>
    <string name="call">Llamar</string>
    <string name="send_sms">Enviar SMS</string>
    <string name="read_mail">Leer Correo</string>
    <string name="name">Nombre</string>
    <string name="last_name">Paterno</string>
    <string name="sur_name">Materno</string>
    <string name="phone">Telefono</string>
    <string name="mail">E- Mail</string>
    <string name="addres">Dirección</string>
    <string name="street">Calle</string>
    <string name="number">Nro de puerta</string>
    <string name="zone">Zona</string>
    <string name="student">Estudiante</string>
    <string name="title_activity_estudiante">Estudiante</string>
    <string name="identification">Usted se ha identiicado como:</string>
    <string name="title_activity_docente">Docente</string>
    <string name="logout">Salir</string>
    <string name="read">Leer</string>
    <string name="write">Escribir</string>
    <string name="permission">Permisos</string>
    <string name="access">Acceso</string>
    <string name="season">Semestre</string>
    <string name="personnel">Personal</string>
    <string name="introcod">Introdusca su código</string>
    <string name="intropass">Introdusca su password</string>
    <string name="type">Tipo</string>
    <string name="official">Titular</string>
    <string name="unofficial">A contrato</string>
    <string name="list">Listar</string>
    <string name="listd">Listar Docente</string>
    <string name="liste">Listar Estudiante</string>
    <string name="title_activity_permisos">Permisos</string>
    <string name="cancel">Cancelar</string>
    <string name="title_activity_admin_semestre">MainActivity</string>
    <string name="Materia">asignature</string>
    <string name="asignature">Materia</string>
    <string name="title_activity_adicionar_materia">AdicionarMateria</string>
    <string name="sig">Sigla</string>
    <string name="description">Descripcion</string>
    <string name="cupo">Cupo</string>
    <string name="title_activity_editar_materia">MainActivity</string>
    <string name="ap">Asignar Paralelo</string>
    <string name="title_activity_asignar_paralelo">AsignarParalelo</string>
    <string name="paralelp">Paralelo</string>
    <string name="insc">Inscribirse</string>
    <string name="title_activity_inscripcion_materia">InscripcionMateria</string>
    <string name="requisito">Asignar prerequisitos</string>
    <string name="title_activity_asignar_requisito">AsignarRequisito</string>
    <string name="title_activity_asignar_materia">AsignarMateria</string>
    <string name="end">Finalizar</string>
    <string name="DNI">CI</string>
    <string name="Item">Item</string>
    <string name="fec_nac">Fecha de nacimiento</string>
    <string name="level">Grado</string>
    <string name="auxiliatura">Asignar Auxiliatura</string>
    <string name="title_activity_auxiliatura">Auxiliatura</string>
    <string name="SelectStudent">Seleccione el estudiante:</string>
    <string name="SelectAsignature">Selecciones la materia:</string>
    <string name="SelectDoc">Seleccione el Docente responsable</string>
    <string name="item">Asigne el nro de item</string>
    <string name="listDocAuxMat">Listar Docentes con [auxiliares+materias]</string>
    <string name="title_activity_listar_doc_aux_mat">ListarDocAuxMat</string>
    <string name="notas">Notas</string>
    <string name="aux">Auxiliares asignados</string>

</resources>
