<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/txtNombreUsu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name" />

        <EditText
            android:id="@+id/txtPaternoUsu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sur_name" />

        <EditText
            android:id="@+id/txtMaternoUsu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code" />

        <EditText
            android:id="@+id/txtCodigoUsu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/lblTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/rbtngTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <RadioButton
                android:id="@+id/rbtnTitular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/official" />

            <RadioButton
                android:id="@+id/rbtnAcontrato"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unofficial" />
        </RadioGroup>

        <TextView
            android:id="@+id/lblAccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/access" />

        <CheckBox
            android:id="@+id/cbtnDocente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="permisosDoc"
            android:text="@string/teacher" />

        <LinearLayout
            android:id="@+id/stackPermissionsDocente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/lblPermissionsDocente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/cbtnLeerDocente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read" />

                <CheckBox
                    android:id="@+id/cbtnEscribirDocente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/write" />

                <CheckBox
                    android:id="@+id/cbtnEliminarDocente"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete" />
            </LinearLayout>
        </LinearLayout>

        <CheckBox
            android:id="@+id/cbtnEstudiante"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="permisosEst"
            android:text="@string/student" />

        <LinearLayout
            android:id="@+id/stackPermissionsEstudiante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/lblPermissionsEstudiante"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/cbtnLeerEstudiante"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read" />

                <CheckBox
                    android:id="@+id/cbtnEscribirEstudiante"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/write" />

                <CheckBox
                    android:id="@+id/cbtnEliminarEstudiante"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete" />
            </LinearLayout>
        </LinearLayout>

        <CheckBox
            android:id="@+id/cbtnPersonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="permisosPer"
            android:text="@string/personnel" />

        <LinearLayout
            android:id="@+id/stackPermissionsPersonal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/lblPermissionsPersonal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/cbtnLeerPersonal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read" />

                <CheckBox
                    android:id="@+id/cbtnEscribirPersonal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/write" />

                <CheckBox
                    android:id="@+id/cbtnEliminarPersonal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete" />
            </LinearLayout>
        </LinearLayout>

        <CheckBox
            android:id="@+id/cbtnSemestre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/season" />

        <LinearLayout
            android:id="@+id/stackPermissionsSemestre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/lblPermissionsSemestre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:id="@+id/cbtnLeerSemestre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/read" />

                <CheckBox
                    android:id="@+id/cbtnEscribirSemestre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/write" />

                <CheckBox
                    android:id="@+id/cbtnEliminarSemestre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="adicionarDocenteDB"
            android:text="@string/ok" />
    </LinearLayout>

</ScrollView>