<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/fondo"
    tools:context=".Estudiante" >

    <TextView
        android:id="@+id/lblTituloEstudiante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/identification" />

    <Button
        android:id="@+id/btnVolEst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="volver"
        android:background="@drawable/boton"
        android:textColor="@color/white"
        android:text="@string/logout" />

    <Button
        android:id="@+id/btnInscribirEst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblTituloEstudiante"
        android:layout_below="@+id/lblTituloEstudiante"
        android:layout_marginTop="32dp"
        android:onClick="inscribirse"
        android:background="@drawable/boton"
        android:textColor="@color/white"
        android:text="@string/insc" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnInscribirEst"
        android:layout_marginTop="21dp"
        android:onClick="inscrito"
        android:background="@drawable/boton"
        android:textColor="@color/white"
        android:text="Materias Inscritas" />

</RelativeLayout>
