<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/txtCodigo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtPass"
        android:layout_alignRight="@+id/txtPass"
        android:layout_below="@+id/txtIdentificacionAdmin"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/introcod"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtCodigo"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/intropass"
        android:inputType="textPassword"
        android:width="400dp" />

    <Button
        android:id="@+id/btnAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txtIdentificacionAdmin"
        android:layout_below="@+id/txtPass"
        android:layout_marginTop="45dp"
        android:onClick="Aceptar"
        android:text="@string/ok" />

    <TextView
        android:id="@+id/txtIdentificacionAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="Logeate"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>