<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:background="@drawable/fondo"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/lblMaterias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/asignature"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/lblMateria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_world" />

        <EditText
            android:id="@+id/txtParalelo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/paralelp" />

        <EditText
            android:id="@+id/txtCup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cupo"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/txtDia1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Dia 1" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Horario del día 1"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TimePicker
            android:id="@+id/timePickerHorario1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/txtDia2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Dia 2" />

        <EditText
            android:id="@+id/txtDuracionDia1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Duracion de la clase del día 1"
            android:inputType="number" />

        <EditText
            android:id="@+id/txtAulaDia1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Aula del dia 1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Horario del día 2"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TimePicker
            android:id="@+id/timePickerHorario2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/txtDuracionDia2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Duracion de la clase del día 2"
            android:inputType="number" />

        <EditText
            android:id="@+id/txtAulaDia2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Aula del dia 2" />

        <Button
            android:id="@+id/btnFinalizarIns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addParalelo"
            android:background="@drawable/boton"
        android:textColor="@color/white"
            android:text="@string/ok" />
    </LinearLayout>

</ScrollView>